server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__barf_backward_drops_the_first_form.snap
---
source: server/src/editing/paredit/tests.rs
expression: (a| b c)
---
----- BEFORE ACTION
(a b c)
  ↑

----- AFTER ACTION: Barf backward
a (b c)
