server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__barf_backward_out_of_an_array.snap
---
source: server/src/editing/paredit/tests.rs
expression: "(f @[x|])"
---
----- BEFORE ACTION
(f @[x])
      ↑

----- AFTER ACTION: Barf backward
(f x @[])
