server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__barf_forward_empties_a_list.snap
---
source: server/src/editing/paredit/tests.rs
expression: (|a)
---
----- BEFORE ACTION
(a)
 ↑

----- AFTER ACTION: Barf forward
() a
