server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__raise_a_list.snap
---
source: server/src/editing/paredit/tests.rs
expression: (foo |(bar x))
---
----- BEFORE ACTION
(foo (bar x))
     ↑

----- AFTER ACTION: Raise
(bar x)
