server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__slurp_backward_into_an_empty_list.snap
---
source: server/src/editing/paredit/tests.rs
expression: a (|)
---
----- BEFORE ACTION
a ()
   ↑

----- AFTER ACTION: Slurp backward
(a)
